// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Button/Button.tools.svelte: Default 1`] = `
<span>
  <button
    class="svelte-11qpkf0"
  >
     
    <span
      class="svelte-11qpkf0"
    >
      Default
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Disabled 1`] = `
<span>
  <button
    class="svelte-11qpkf0"
    disabled=""
  >
     
    <span
      class="svelte-11qpkf0"
    >
      Disabled
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Large icon 1`] = `
<span>
  <button
    class="iconOnly large svelte-11qpkf0"
  >
    <i
      class="material-icons svelte-11qpkf0"
    >
      play_arrow
    </i>
     
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Large text and icon 1`] = `
<span>
  <button
    class="large svelte-11qpkf0"
  >
    <i
      class="material-icons svelte-11qpkf0"
    >
      person
    </i>
     
    <span
      class="svelte-11qpkf0"
    >
      Hey!
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Primary 1`] = `
<span>
  <button
    class="primary svelte-11qpkf0"
  >
     
    <span
      class="svelte-11qpkf0"
    >
      Primary
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Primary disabled 1`] = `
<span>
  <button
    class="primary svelte-11qpkf0"
    disabled=""
  >
     
    <span
      class="svelte-11qpkf0"
    >
      Primary
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Primary icon 1`] = `
<span>
  <button
    class="primary iconOnly svelte-11qpkf0"
  >
    <i
      class="material-icons svelte-11qpkf0"
    >
      volume_up
    </i>
     
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Primary with badge 1`] = `
<span>
  <button
    class="primary svelte-11qpkf0"
  >
    <i
      class="material-icons svelte-11qpkf0"
    >
      face
    </i>
     
    <span
      class="svelte-11qpkf0"
    >
      Hello
    </span>
     
     
    <div
      class="badge svelte-11qpkf0 halo"
    >
      5
    </div>
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: Text and icon 1`] = `
<span>
  <button
    class="svelte-11qpkf0"
  >
    <i
      class="material-icons svelte-11qpkf0"
    >
      face
    </i>
     
    <span
      class="svelte-11qpkf0"
    >
      Hello
    </span>
     
     
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: With badge 1`] = `
<span>
  <button
    class="svelte-11qpkf0"
  >
    <i
      class="material-icons svelte-11qpkf0"
    >
      face
    </i>
     
    <span
      class="svelte-11qpkf0"
    >
      Hello
    </span>
     
     
    <div
      class="badge svelte-11qpkf0 halo"
    >
      23
    </div>
  </button>
</span>
`;

exports[`Toolshot components/Button/Button.tools.svelte: With badge limit 1`] = `
<span>
  <button
    class="svelte-11qpkf0"
  >
    <i
      class="material-icons svelte-11qpkf0"
    >
      warning
    </i>
     
    <span
      class="svelte-11qpkf0"
    >
      Just too much
    </span>
     
     
    <div
      class="badge svelte-11qpkf0 halo"
    >
      999+
    </div>
  </button>
</span>
`;
